<package>
  <name>robot_simulator</name>
  <version>1.0.0</version>
  <description>robot_simulator</description>
  <maintainer email="schultzjarvis@todo.todo">Jarvis Schultz</maintainer>

  <license>GNUv3</license>


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>puppeteer_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>puppeteer_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
